# payroll-calculator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
dsl/: README.md  hu2025.jsonc  schema.json
dsl/hu2024/: dsl.jsonc  dsl.yaml
dsl/hu2025/: dsl.jsonc  dsl.yaml
src/: __init__.py
src/payroll_calculator/: api.py  engine.py  loader.py  safe_eval.py
src/payroll_tax_calculator/: __init__.py  api.py  api_contracts.py  engine.py  loader.py  rules.py  safe_eval.py  validate.py
tests/: README.md  __init__.py  conftest.py  test_engine.py  test_integration.py  test_loader.py  test_safe_eval.py
tests/data/: test_dsl.jsonc  test_dsl.yaml
