[project]
name = "payroll_tax_calculator"
version = "0.1.0"
description = "A flexible, rule-based calculator for employee taxes and contributions"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-mcp>=0.3.3",
    "ruamel.yaml>=0.17.21",
]

[dependency-groups]
dev = [
    "jsonschema>=4.23.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src/payroll_tax_calculator --cov-report=term-missing"